Bug 638430. Fix finding the display root of a view when a floating view is inside a floating view. r=roc